clusters/home/apps/cloud/website/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: website
  labels:
    goldilocks.fairwinds.com/enabled: "true"
