clusters/home/apps/cloud/website/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: layertwo-website
  namespace: website
  annotations:
    external-dns.kubernetes.io/hostname: "www.layertwo.dev,layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`www.layertwo.dev`) || Host(`layertwo.dev`)
    kind: Rule
    middlewares:
    - name: website-redirect
      namespace: website
    - name: compress
      namespace: garage
    services:
    - name: garage-truenas
      namespace: garage
      port: web
      serversTransport: garage-transport
